file(GLOB CODECSERVER_PROTO_FILES "*.proto")
add_library(codecserver_proto OBJECT ${CODECSERVER_PROTO_FILES})
target_link_libraries(codecserver_proto PUBLIC protobuf::libprotobuf)
protobuf_generate(TARGET codecserver_proto LANGUAGE cpp OUT_VAR CODECSERVER_PROTO_GENERATED_FILES)

set(CODECSERVER_PROTO_HEADERS ${CODECSERVER_PROTO_GENERATED_FILES})
list(FILTER CODECSERVER_PROTO_HEADERS INCLUDE REGEX "\\.pb\\.h\$")

install(FILES ${CODECSERVER_PROTO_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/codecserver/proto)
install(FILES ${CODECSERVER_PROTO_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/codecserver/proto)
